@@ -27,7 +27,7 @@ make4ht [options] filename ["tex4ht.sty op." "tex4ht op." "t4ht op" "latex op"]
 
 -- set version number. the template should be replaced by the
 -- actual version number by the build script
-local version = "v0.2e"
+local version = "v0.2f"
 mkparams.version_number = version
 
 local args = mkparams.get_args()
