@@ -71,7 +71,7 @@ undergoes any modifications, so that it will be clear which version of
 @^extensions to \MP@>
 @^system dependencies@>
 
-@d default_banner "This is MetaPost, Version 2.000" /* printed when \MP\ starts */
+@d default_banner "This is MetaPost, Version 2.00" /* printed when \MP\ starts */
 @d true 1
 @d false 0
 
