@@ -1,3 +1,7 @@
+2019-03-22  Akira Kakuto  <kakuto@w32tex.org>
+
+	* pmp.ch: Sync with the change of mp.w.
+
 2019-02-23  Akira Kakuto  <kakuto@w32tex.org>
 
 	* pmp.ch: Bump upmpost version to 2.00-0.04-u1.24.
